Created page with "==Descrizione=="

--- a/wiki/it/Macro_SpreadsheetTools.html
+++ b/wiki/it/Macro_SpreadsheetTools.html
@@ -1,12 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro SpreadsheetTools/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+SpreadsheetTools&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_SpreadsheetTools.html" class="mw-pt-progress mw-pt-progress--high" title="Makro Tabellen-Werkzeuge (86% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_SpreadsheetTools.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Tabellen-Werkzeuge (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_SpreadsheetTools.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro SpreadsheetTools (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_SpreadsheetTools.html" class="mw-pt-progress mw-pt-progress--high" title="Macro SpreadsheetTools (86% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Macro_SpreadsheetTools.html" class="mw-pt-progress mw-pt-progress--high" title="Makrodefinicja: Narz&#281;dzia arkusza kalkulacyjnego (86% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">This macro is obsolete as of version 0.19. See <a href="../Spreadsheet_Workbench.html#Cut,_copy_and_paste_cells" title="Spreadsheet Workbench">cut/copy/paste cells</a>.</div>
-</div>
+<li><a href="../fr/Macro_SpreadsheetTools.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro SpreadsheetTools (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><a href="../pl/Macro_SpreadsheetTools.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Narz&#281;dzia arkusza kalkulacyjnego (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">Questa macro &egrave; obsoleta a partire dalla versione 0.19. Vedere <a href="../it/Spreadsheet_Workbench.html#Cut,_copy_and_paste_cells" title="Spreadsheet Workbench/it">taglia/copia/incolla di celle</a>.</div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -75,11 +73,11 @@ Macro Strumenti per foglio di calcolo
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Questa macro aiuta a gestire le celle all'interno dell'ambiente Spreadsheet di FreeCAD. Con il suo aiuto si &egrave; in grado di:
 </p>
 <ul><li>Tagliare o cancellare dati e/o informazioni alias nell'area selezionata delle celle.</li>
@@ -575,30 +573,30 @@ form.show()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20251116110233
+Cached time: 20260114134346
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.054 seconds
-Real time usage: 0.072 seconds
-Preprocessor visited node count: 105/1000000
-Post&#8208;expand include size: 2561/2097152 bytes
-Template argument size: 21216/2097152 bytes
+CPU time usage: 0.042 seconds
+Real time usage: 0.079 seconds
+Preprocessor visited node count: 104/1000000
+Post&#8208;expand include size: 2589/2097152 bytes
+Template argument size: 21244/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 21774/5000000 bytes
+Unstrip post&#8208;expand size: 21790/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.022      1 -total
- 38.49%    3.088      1 Template:AddOnObsolete
- 35.82%    2.874      1 Template:Macro/it
- 12.74%    1.022      1 Template:MacroCode
-  8.27%    0.663      1 Template:Clear
+100.00%   17.504      1 -total
+ 34.26%    5.997      1 Template:MacroCode
+ 25.91%    4.535      1 Template:Macro/it
+ 19.47%    3.408      1 Template:Clear
+ 18.09%    3.166      1 Template:AddOnObsolete
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:88198-0!canonical and timestamp 20251116110233 and revision id 1692985. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:88198-0!canonical and timestamp 20260114134346 and revision id 1738177. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
