--- a/wiki/it/Macro_SpreadsheetTools.html
+++ b/wiki/it/Macro_SpreadsheetTools.html
@@ -76,14 +76,11 @@ Macro Strumenti per foglio di calcolo
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
-<p>Questa macro aiuta a gestire le celle all'interno dell'ambiente Spreadsheet di FreeCAD. Con il suo aiuto si &egrave; in grado di:
+<p>Questa macro aiuta a gestire le celle all'interno dell'ambiente di lavoro del foglio di calcolo di FreeCAD. Con il suo aiuto &egrave; possibile:
 </p>
-<ul><li>Tagliare o cancellare dati e/o informazioni alias nell'area selezionata delle celle.</li>
-<li>Copiare negli appunti i dati e/o le informazioni di un alias nell'area selezionata delle celle.</li>
-<li>Incollare dagli appunti i dati e/o le informazioni di un alias nell'area selezionata delle celle.</li></ul>
-</div>
+<ul><li>Tagliare/eliminare dati e/o informazioni di alias nell'area selezionata delle celle.</li>
+<li>Copiare dati e/o informazioni di alias nell'area selezionata delle celle negli appunti.</li>
+<li>Incollare dati e/o informazioni di alias nell'area selezionata delle celle dagli appunti.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Screenshot_from_2017-09-02_20-01-49.png&amp;filetimestamp=20171103163347&amp;.html" class="mw-file-description"><img src="../File/Screenshot_from_2017-09-02_20-01-49.png" decoding="async" width="450" height="257" class="mw-file-element" data-file-width="450" data-file-height="257"></a></span>
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
@@ -573,13 +570,13 @@ form.show()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114134346
+Cached time: 20260114134418
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.042 seconds
-Real time usage: 0.079 seconds
-Preprocessor visited node count: 104/1000000
+CPU time usage: 0.039 seconds
+Real time usage: 0.062 seconds
+Preprocessor visited node count: 100/1000000
 Post&#8208;expand include size: 2589/2097152 bytes
 Template argument size: 21244/2097152 bytes
 Highest expansion depth: 5/100
@@ -589,14 +586,14 @@ Unstrip post&#8208;expand size: 21790/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.504      1 -total
- 34.26%    5.997      1 Template:MacroCode
- 25.91%    4.535      1 Template:Macro/it
- 19.47%    3.408      1 Template:Clear
- 18.09%    3.166      1 Template:AddOnObsolete
+100.00%   12.438      1 -total
+ 30.40%    3.781      1 Template:Macro/it
+ 25.57%    3.181      1 Template:MacroCode
+ 21.74%    2.704      1 Template:AddOnObsolete
+ 18.18%    2.261      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:88198-0!canonical and timestamp 20260114134346 and revision id 1738177. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:88198-0!canonical and timestamp 20260114134418 and revision id 1738179. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
