--- a/wiki/it/Macro_SpreadsheetTools.html
+++ b/wiki/it/Macro_SpreadsheetTools.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_SpreadsheetTools.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Tabellen-Werkzeuge (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_SpreadsheetTools.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro SpreadsheetTools (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_SpreadsheetTools.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro SpreadsheetTools (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_SpreadsheetTools.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Narz&#281;dzia arkusza kalkulacyjnego (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">Questa macro &egrave; obsoleta a partire dalla versione 0.19. Vedere <a href="../it/Spreadsheet_Workbench.html#Cut,_copy_and_paste_cells" title="Spreadsheet Workbench/it">taglia/copia/incolla di celle</a>.</div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -84,11 +84,8 @@ Macro Strumenti per foglio di calcolo
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Screenshot_from_2017-09-02_20-01-49.png&amp;filetimestamp=20171103163347&amp;.html" class="mw-file-description"><img src="../File/Screenshot_from_2017-09-02_20-01-49.png" decoding="async" width="450" height="257" class="mw-file-element" data-file-width="450" data-file-height="257"></a></span>
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_SpreadsheetTools.png&amp;filetimestamp=20190707195529&amp;.html" class="mw-file-description"><img src="../File/Macro_SpreadsheetTools.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro SpreadsheetTools.FCMacro</b>
+<p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_SpreadsheetTools.png&amp;filetimestamp=20190707195529&amp;.html" class="mw-file-description"><img src="../File/Macro_SpreadsheetTools.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Macro SpreadsheetTools.FCMacro</b>
 </p>
 <pre># ============================================================================================================
 # ============================================================================================================
@@ -570,30 +567,30 @@ form.show()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114134418
+Cached time: 20260114134432
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.062 seconds
-Preprocessor visited node count: 100/1000000
+CPU time usage: 0.030 seconds
+Real time usage: 0.059 seconds
+Preprocessor visited node count: 99/1000000
 Post&#8208;expand include size: 2589/2097152 bytes
 Template argument size: 21244/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 21790/5000000 bytes
+Unstrip post&#8208;expand size: 21794/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.438      1 -total
- 30.40%    3.781      1 Template:Macro/it
- 25.57%    3.181      1 Template:MacroCode
- 21.74%    2.704      1 Template:AddOnObsolete
- 18.18%    2.261      1 Template:Clear
+100.00%    9.829      1 -total
+ 32.74%    3.218      1 Template:MacroCode
+ 26.74%    2.628      1 Template:Macro/it
+ 22.53%    2.214      1 Template:AddOnObsolete
+ 14.58%    1.433      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:88198-0!canonical and timestamp 20260114134418 and revision id 1738179. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:88198-0!canonical and timestamp 20260114134432 and revision id 1738181. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
