--- a/wiki/it/Macro_SpreadsheetTools.html
+++ b/wiki/it/Macro_SpreadsheetTools.html
@@ -4,8 +4,7 @@
 <li><a href="../fr/Macro_SpreadsheetTools.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro SpreadsheetTools (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_SpreadsheetTools.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Narz&#281;dzia arkusza kalkulacyjnego (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
-<p><a href="../index.php?title=Template;AddOnObsolete/it&amp;action=edit&amp;redlink=1.html" class="new" title="Template:AddOnObsolete/it (page does not exist)">Template:AddOnObsolete/it</a>
-</p>
+<div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">Questa macro &egrave; obsoleta a partire dalla versione 0.19. Vedere <a href="../it/Spreadsheet_Workbench.html#Cut,_copy_and_paste_cells" title="Spreadsheet Workbench/it">taglia/copia/incolla di celle</a>.</div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -568,15 +567,15 @@ form.show()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114134510
+Cached time: 20260114134524
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.059 seconds
-Preprocessor visited node count: 95/1000000
-Post&#8208;expand include size: 2145/2097152 bytes
-Template argument size: 21096/2097152 bytes
+CPU time usage: 0.033 seconds
+Real time usage: 0.069 seconds
+Preprocessor visited node count: 99/1000000
+Post&#8208;expand include size: 2589/2097152 bytes
+Template argument size: 21244/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -584,14 +583,14 @@ Unstrip post&#8208;expand size: 21794/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.456      1 -total
- 38.60%    4.036      1 Template:Macro/it
- 27.16%    2.840      1 Template:MacroCode
- 19.20%    2.008      1 Template:Clear
- 10.98%    1.148      1 Template:AddOnObsolete/it
+100.00%   14.233      1 -total
+ 34.36%    4.891      1 Template:Macro/it
+ 30.24%    4.304      1 Template:MacroCode
+ 20.71%    2.947      1 Template:Clear
+ 10.89%    1.550      1 Template:AddOnObsolete
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:88198-0!canonical and timestamp 20260114134509 and revision id 1738183. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:88198-0!canonical and timestamp 20260114134524 and revision id 1738185. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
