Created page with "In questa pagina è possibile specificare quanto segue:"

--- a/wiki/it/Assembly_Preferences.html
+++ b/wiki/it/Assembly_Preferences.html
@@ -20,11 +20,8 @@
 </div>
 <p>C'&egrave; solo una pagina: Generale.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Preferences_Assembly_Page_General.png&amp;filetimestamp=20240828103118&amp;.html" class="mw-file-description"><img src="../File/Preferences_Assembly_Page_General.png" decoding="async" width="378" height="154" class="mw-file-element" data-file-width="378" data-file-height="154"></a></span>
+</p><p>In questa pagina &egrave; possibile specificare quanto segue:
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>On this page you can specify the following:
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="wikitable">
 <tbody><tr>
@@ -86,13 +83,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114141823
+Cached time: 20260114141833
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.062 seconds
-Real time usage: 0.102 seconds
-Preprocessor visited node count: 216/1000000
+CPU time usage: 0.070 seconds
+Real time usage: 0.097 seconds
+Preprocessor visited node count: 215/1000000
 Post&#8208;expand include size: 12100/2097152 bytes
 Template argument size: 3763/2097152 bytes
 Highest expansion depth: 5/100
@@ -102,19 +99,19 @@ Unstrip post&#8208;expand size: 1417/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.495      1 -total
- 27.76%    7.356      1 Template:Assembly_Tools_navi/it
- 27.38%    7.255      1 Template:Userdocnavi/it
- 19.28%    5.109      2 Template:Navigation_menu_2
- 10.93%    2.897      2 Template:Docnav
-  9.55%    2.532      5 Template:MenuCommand
-  5.81%    1.540      1 Template:TOCright
-  5.57%    1.475      1 Template:KEY
-  4.60%    1.220      2 Template:FileName
-  4.08%    1.081      1 Template:Incode
+100.00%   28.581      1 -total
+ 27.19%    7.772      1 Template:Userdocnavi/it
+ 25.14%    7.184      1 Template:Assembly_Tools_navi/it
+ 13.87%    3.964      2 Template:Navigation_menu_2
+  9.11%    2.603      2 Template:Docnav
+  8.30%    2.372      5 Template:MenuCommand
+  7.93%    2.266      1 Template:Incode
+  7.08%    2.024      1 Template:TOCright
+  6.17%    1.765      2 Template:FileName
+  5.04%    1.441      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411113-0!canonical and timestamp 20260114141823 and revision id 1738191. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411113-0!canonical and timestamp 20260114141832 and revision id 1738193. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
