--- a/wiki/Release_notes_1.2.html
+++ b/wiki/Release_notes_1.2.html
@@ -41,6 +41,7 @@ See <a href="Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways t
 </p>
 <ul><li><a rel="nofollow" class="external free" href="https://github.com/FreeCAD/FreeCAD/pull/24078">https://github.com/FreeCAD/FreeCAD/pull/24078</a></li>
 <li><a rel="nofollow" class="external free" href="https://github.com/FreeCAD/FreeCAD/pull/24550">https://github.com/FreeCAD/FreeCAD/pull/24550</a></li>
+<li><a rel="nofollow" class="external free" href="https://github.com/FreeCAD/FreeCAD/pull/24595">https://github.com/FreeCAD/FreeCAD/pull/24595</a></li>
 <li><a rel="nofollow" class="external free" href="https://github.com/FreeCAD/FreeCAD/pull/25086">https://github.com/FreeCAD/FreeCAD/pull/25086</a></li>
 <li><a rel="nofollow" class="external free" href="https://github.com/FreeCAD/FreeCAD/pull/25147">https://github.com/FreeCAD/FreeCAD/pull/25147</a></li></ul>
 <h3><span class="mw-headline" id="Further_BIM_improvements">Further BIM improvements</span></h3>
@@ -83,12 +84,12 @@ See <a href="Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways t
 <h2><span class="mw-headline" id="Import_and_export">Import and export</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260107122400
+Cached time: 20260114144933
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.045 seconds
+CPU time usage: 0.038 seconds
+Real time usage: 0.041 seconds
 Preprocessor visited node count: 199/1000000
 Post&#8208;expand include size: 1351/2097152 bytes
 Template argument size: 454/2097152 bytes
@@ -99,14 +100,14 @@ Unstrip post&#8208;expand size: 0/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.635      1 -total
- 48.66%    3.229      2 Template:Message
- 28.89%    1.917      1 Template:VeryImportantMessage
- 20.71%    1.374      1 Template:FileName
- 17.51%    1.162      1 Template:TOCright
+100.00%    4.507      1 -total
+ 41.93%    1.890      2 Template:Message
+ 30.78%    1.387      1 Template:VeryImportantMessage
+ 19.97%    0.900      1 Template:TOCright
+ 18.97%    0.855      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400690-0!canonical and timestamp 20260107122400 and revision id 1728580. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400690-0!canonical and timestamp 20260114144937 and revision id 1738194. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
