--- a/wiki/Release_notes_1.2.html
+++ b/wiki/Release_notes_1.2.html
@@ -74,7 +74,7 @@ See <a href="Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways t
 <h3><span class="mw-headline" id="Further_Robot_improvements">Further Robot improvements</span></h3>
 <h2><span class="mw-headline" id="Sketcher_Workbench">Sketcher Workbench</span></h2>
 <h3><span class="mw-headline" id="Further_Sketcher_improvements">Further Sketcher improvements</span></h3>
-<ul><li>It is now possible to import B&eacute;zier and Offset curves as <span typeof="mw:File"><a href="index.php?title=Sketcher_Projection.svg&amp;filetimestamp=20241129200338&amp;.html" class="mw-file-description"><img src="File/Sketcher_Projection.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_Projection.html" title="Sketcher Projection">External geometry</a> <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25144">Pull request #25144</a></li></ul>
+<ul><li>It is now possible to import B&eacute;zier and Offset curves as <span typeof="mw:File"><a href="index.php?title=Sketcher_Projection.svg&amp;filetimestamp=20241129200338&amp;.html" class="mw-file-description"><img src="File/Sketcher_Projection.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_Projection.html" title="Sketcher Projection">External geometry</a>. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25144">Pull request #25144</a></li></ul>
 <h2><span class="mw-headline" id="Spreadsheet_Workbench">Spreadsheet Workbench</span></h2>
 <h3><span class="mw-headline" id="Further_Spreadsheet_improvements">Further Spreadsheet improvements</span></h3>
 <h2><span class="mw-headline" id="Surface_Workbench">Surface Workbench</span></h2>
@@ -84,12 +84,12 @@ See <a href="Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways t
 <h2><span class="mw-headline" id="Import_and_export">Import and export</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114144933
+Cached time: 20260114145844
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.041 seconds
+CPU time usage: 0.033 seconds
+Real time usage: 0.037 seconds
 Preprocessor visited node count: 199/1000000
 Post&#8208;expand include size: 1351/2097152 bytes
 Template argument size: 454/2097152 bytes
@@ -100,14 +100,14 @@ Unstrip post&#8208;expand size: 0/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.507      1 -total
- 41.93%    1.890      2 Template:Message
- 30.78%    1.387      1 Template:VeryImportantMessage
- 19.97%    0.900      1 Template:TOCright
- 18.97%    0.855      1 Template:FileName
+100.00%    4.988      1 -total
+ 51.58%    2.573      2 Template:Message
+ 23.05%    1.150      1 Template:FileName
+ 21.93%    1.094      1 Template:VeryImportantMessage
+ 20.59%    1.027      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400690-0!canonical and timestamp 20260114144937 and revision id 1738194. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400690-0!canonical and timestamp 20260114145849 and revision id 1738195. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
