--- a/wiki/Release_notes_1.2.html
+++ b/wiki/Release_notes_1.2.html
@@ -52,7 +52,7 @@ See <a href="Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways t
 <h2><span class="mw-headline" id="FEM_Workbench">FEM Workbench</span></h2>
 <h3><span class="mw-headline" id="Further_FEM_improvements">Further FEM improvements</span></h3>
 <ul><li>The <span typeof="mw:File"><a href="index.php?title=FEM_ConstraintElectricChargeDensity.svg&amp;filetimestamp=20250329180554&amp;.html" class="mw-file-description"><img src="File/FEM_ConstraintElectricChargeDensity.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="FEM_ElectricChargeDensity.html" title="FEM ElectricChargeDensity">Electric Charge Density</a> load now has a <i>Concentrated</i> checkbox in the <i>Total Source</i> mode to use concentrate instead of distributed load (making it also applicable to edges and vertices) with CalculiX. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25237">Pull request #25237</a></li>
-<li>The <span typeof="mw:File"><a href="index.php?title=FEM_ResultShow.svg&amp;filetimestamp=20241127174549&amp;.html" class="mw-file-description"><img src="File/FEM_ResultShow.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="FEM_ResultShow.html" title="FEM ResultShow">FEM results objetcts</a> now support the animation of half cycles in addition to reversed full cycles. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24129">Pull request #24129</a></li>
+<li>The <span typeof="mw:File"><a href="index.php?title=FEM_ResultShow.svg&amp;filetimestamp=20241127174549&amp;.html" class="mw-file-description"><img src="File/FEM_ResultShow.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="FEM_ResultShow.html" title="FEM ResultShow">FEM results objects</a> now support the animation of half cycles in addition to reversed full cycles. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24129">Pull request #24129</a></li>
 <li>The <span typeof="mw:File"><a href="index.php?title=FEM_ConstraintSectionPrint.svg&amp;filetimestamp=20241127174351&amp;.html" class="mw-file-description"><img src="File/FEM_ConstraintSectionPrint.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="FEM_ConstraintSectionPrint.html" title="FEM ConstraintSectionPrint">Section Print</a> feature now supports 2D models and electric flux in electrostatic analyses. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25081">Pull request #25081</a></li></ul>
 <h2><span class="mw-headline" id="Inspection_Workbench">Inspection Workbench</span></h2>
 <h3><span class="mw-headline" id="Further_Inspection_improvements">Further Inspection improvements</span></h3>
@@ -84,12 +84,12 @@ See <a href="Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways t
 <h2><span class="mw-headline" id="Import_and_export">Import and export</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114145844
+Cached time: 20260114145918
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.033 seconds
-Real time usage: 0.037 seconds
+CPU time usage: 0.044 seconds
+Real time usage: 0.052 seconds
 Preprocessor visited node count: 199/1000000
 Post&#8208;expand include size: 1351/2097152 bytes
 Template argument size: 454/2097152 bytes
@@ -100,14 +100,14 @@ Unstrip post&#8208;expand size: 0/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.988      1 -total
- 51.58%    2.573      2 Template:Message
- 23.05%    1.150      1 Template:FileName
- 21.93%    1.094      1 Template:VeryImportantMessage
- 20.59%    1.027      1 Template:TOCright
+100.00%    5.997      1 -total
+ 49.14%    2.947      2 Template:Message
+ 29.70%    1.781      1 Template:VeryImportantMessage
+ 16.92%    1.015      1 Template:FileName
+ 14.77%    0.886      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400690-0!canonical and timestamp 20260114145849 and revision id 1738195. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400690-0!canonical and timestamp 20260114145924 and revision id 1738196. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
