--- a/wiki/Release_notes_1.2.html
+++ b/wiki/Release_notes_1.2.html
@@ -1,5 +1,5 @@
-<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Release notes 1.2</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><p><br>
-</p>
+<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Release notes 1.2</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Release+notes+1.2&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
+<li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li></ul></div>
 <div class="warning-box">FreeCAD 1.2 is under development, there is no expected released date yet.</div>
 <div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">
 <p>Are features missing? Mention them in the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=10&amp;t=101169">Release notes for v1.2</a> forum thread.<br>
@@ -84,30 +84,30 @@ See <a href="Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways t
 <h2><span class="mw-headline" id="Import_and_export">Import and export</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114145918
+Cached time: 20260114150248
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.044 seconds
-Real time usage: 0.052 seconds
-Preprocessor visited node count: 199/1000000
+CPU time usage: 0.067 seconds
+Real time usage: 0.086 seconds
+Preprocessor visited node count: 216/1000000
 Post&#8208;expand include size: 1351/2097152 bytes
 Template argument size: 454/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 0/5000000 bytes
+Unstrip post&#8208;expand size: 519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.997      1 -total
- 49.14%    2.947      2 Template:Message
- 29.70%    1.781      1 Template:VeryImportantMessage
- 16.92%    1.015      1 Template:FileName
- 14.77%    0.886      1 Template:TOCright
+100.00%   11.266      1 -total
+ 44.08%    4.966      1 Template:VeryImportantMessage
+ 40.90%    4.608      2 Template:Message
+ 13.63%    1.535      1 Template:FileName
+ 10.68%    1.203      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400690-0!canonical and timestamp 20260114145924 and revision id 1738196. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400690-0!canonical and timestamp 20260114150248 and revision id 1738197. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
