Marked this version for translation

--- a/wiki/Assembly.html
+++ b/wiki/Assembly.html
@@ -1,12 +1,12 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Assembly</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Assembly&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Zusammenbau (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="Zusammenbau (82% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Assemblage (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Assemblaggio (100% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Z&#322;o&#380;enie (100% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="fr/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="Assemblage (82% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="Assemblaggio (82% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="Z&#322;o&#380;enie (82% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt-br/Assembly.html" class="mw-pt-progress mw-pt-progress--med" title="Montagem (24% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><a href="ru/Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1057;&#1073;&#1086;&#1088;&#1082;&#1072; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
-<li><a href="ko/Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="&#51312;&#47549;&#54408; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
+<li><a href="ru/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="&#1057;&#1073;&#1086;&#1088;&#1082;&#1072; (82% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
+<li><a href="ko/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="&#51312;&#47549;&#54408; (82% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <p>In FreeCAD the word "<a class="mw-selflink selflink">Assembly</a>" is normally used to refer to a <a href="Model.html" title="Model">3D model</a> that is composed of several distinguishable parts, that are put together in some way to create a functional object, just like real life products are made.
@@ -99,33 +99,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112063715
+Cached time: 20260114150443
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.108 seconds
-Real time usage: 0.129 seconds
+CPU time usage: 0.122 seconds
+Real time usage: 0.139 seconds
 Preprocessor visited node count: 426/1000000
 Post&#8208;expand include size: 28759/2097152 bytes
 Template argument size: 11356/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1579/5000000 bytes
+Unstrip post&#8208;expand size: 1549/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.364      1 -total
- 43.82%    7.171      1 Template:Std_Base_navi
- 40.89%    6.691      3 Template:Navigation_menu_2
- 18.68%    3.057      1 Template:Document_objects_navi
- 12.75%    2.086      1 Template:Userdocnavi
-  8.92%    1.460      1 Template:Caption
-  7.20%    1.179      1 Template:Button
-  5.82%    0.952      1 Template:TOCright
+100.00%   19.984      1 -total
+ 47.68%    9.528      3 Template:Navigation_menu_2
+ 43.41%    8.675      1 Template:Std_Base_navi
+ 20.22%    4.041      1 Template:Document_objects_navi
+ 15.58%    3.114      1 Template:Userdocnavi
+  6.52%    1.303      1 Template:TOCright
+  6.30%    1.260      1 Template:Caption
+  5.16%    1.031      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:178733-0!canonical and timestamp 20260112063721 and revision id 1737230. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:178733-0!canonical and timestamp 20260114150443 and revision id 1737230. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
