--- a/wiki/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/Robust_MCP_Bridge_Workbench.html
@@ -17,20 +17,20 @@
 <li>Thread-safe queue system ensuring safe FreeCAD operations.</li>
 <li>Configurable auto-start on FreeCAD launch.</li></ul>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
-<h3><span id="Via_Addon_Manager_.28Recommended.29"></span><span class="mw-headline" id="Via_Addon_Manager_(Recommended)">Via Addon Manager (Recommended)</span></h3>
+<h3><span id="Via_Addon_Manager_.28recommended.29"></span><span class="mw-headline" id="Via_Addon_Manager_(recommended)">Via Addon Manager (recommended)</span></h3>
 <ol><li>Open FreeCAD</li>
 <li>Go to <b>Tools &rarr; Addon Manager</b></li>
 <li>Search for "Robust MCP Bridge"</li>
 <li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Install</span></li>
 <li>Restart FreeCAD</li></ol>
-<h3><span class="mw-headline" id="Manual_Installation">Manual Installation</span></h3>
+<h3><span class="mw-headline" id="Manual_installation">Manual installation</span></h3>
 <p>Download the latest release from <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/releases">GitHub Releases</a> and extract to your FreeCAD Mod directory:
 </p>
 <ul><li><b>Linux</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.local/share/FreeCAD/Mod/FreecadRobustMCPBridge/</span></li>
 <li><b>macOS</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/Library/Application Support/FreeCAD/Mod/FreecadRobustMCPBridge/</span></li>
 <li><b>Windows</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%/FreeCAD/Mod/FreecadRobustMCPBridge/</span></li></ul>
 <h2><span class="mw-headline" id="Usage">Usage</span></h2>
-<h3><span class="mw-headline" id="GUI_Mode">GUI Mode</span></h3>
+<h3><span class="mw-headline" id="GUI_mode">GUI mode</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Addon_RobustMCPBridge_toolbar.png&amp;filetimestamp=20260111060550&amp;.html" class="mw-file-description" title="Robust MCP Bridge workbench toolbar"><img alt="Robust MCP Bridge workbench toolbar" src="File/Addon_RobustMCPBridge_toolbar.png" decoding="async" width="294" height="102" class="mw-file-element" data-file-width="294" data-file-height="102"></a></span>
 </p>
 <ol><li>Switch to the <b>Robust MCP Bridge</b> workbench using the workbench selector</li>
@@ -40,7 +40,7 @@
 <p>To stop the bridge, click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Stop Bridge</span> in the toolbar.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Addon_RobustMCPBridge_statusbar.png&amp;filetimestamp=20260111011608&amp;.html" class="mw-file-description" title="Robust MCP Bridge workbench statusbar"><img alt="Robust MCP Bridge workbench statusbar" src="File/Addon_RobustMCPBridge_statusbar.png" decoding="async" width="396" height="86" class="mw-file-element" data-file-width="396" data-file-height="86"></a></span>
 </p>
-<h3><span class="mw-headline" id="Headless_Mode">Headless Mode</span></h3>
+<h3><span class="mw-headline" id="Headless_mode">Headless mode</span></h3>
 <p>For automation and CI/CD pipelines, the bridge can run without the GUI:
 </p><p><b>Linux:</b>
 </p>
@@ -84,7 +84,7 @@
 </td></tr></tbody></table>
 <p><span typeof="mw:File"><a href="index.php?title=Addon_RobustMCPBridge_preferences.png&amp;filetimestamp=20260111061341&amp;.html" class="mw-file-description" title="Robust MCP Bridge workbench preference pane"><img alt="Robust MCP Bridge workbench preference pane" src="File/Addon_RobustMCPBridge_preferences.png" decoding="async" width="800" height="598" class="mw-file-element" data-file-width="1790" data-file-height="1338"></a></span>
 </p>
-<h2><span class="mw-headline" id="Features_by_Mode">Features by Mode</span></h2>
+<h2><span class="mw-headline" id="Features_by_mode">Features by mode</span></h2>
 <table class="wikitable">
 <tbody><tr>
 <th>Feature</th>
@@ -131,7 +131,7 @@
 <td>Yes</td>
 <td>No
 </td></tr></tbody></table>
-<h2><span class="mw-headline" id="Connecting_MCP_Clients">Connecting MCP Clients</span></h2>
+<h2><span class="mw-headline" id="Connecting_MCP_clients">Connecting MCP clients</span></h2>
 <p>This workbench provides the server that MCP clients connect to. To use with AI assistants like Claude, you need an MCP client such as the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a>:
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">pip</span> <span class="n">install</span> <span class="n">freecad</span><span class="o">-</span><span class="n">robust</span><span class="o">-</span><span class="n">mcp</span>
@@ -143,15 +143,15 @@
 <p>See the <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub repository</a> for full documentation on configuring MCP clients.
 </p>
 <h2><span class="mw-headline" id="Troubleshooting">Troubleshooting</span></h2>
-<h3><span id="Bridge_Won.27t_Start"></span><span class="mw-headline" id="Bridge_Won't_Start">Bridge Won't Start</span></h3>
+<h3><span id="Bridge_won.27t_start"></span><span class="mw-headline" id="Bridge_won't_start">Bridge won't start</span></h3>
 <ol><li>Check the FreeCAD Python console (<b>View &rarr; Panels &rarr; Python console</b>) for error messages.</li>
 <li>Ensure no other process is using ports 9875/9876.</li>
 <li>Try restarting FreeCAD.</li></ol>
-<h3><span class="mw-headline" id="Connection_Refused">Connection Refused</span></h3>
+<h3><span class="mw-headline" id="Connection_refused">Connection refused</span></h3>
 <ol><li>Verify the bridge is running (green status indicator in toolbar).</li>
 <li>Check that ports match between the workbench preferences and your MCP client configuration.</li>
 <li>If connecting from Docker, use <code>host.docker.internal</code> instead of <code>localhost</code>.</li></ol>
-<h3><span id="Headless_Mode_Won.27t_Start"></span><span class="mw-headline" id="Headless_Mode_Won't_Start">Headless Mode Won't Start</span></h3>
+<h3><span id="Headless_mode_won.27t_start"></span><span class="mw-headline" id="Headless_mode_won't_start">Headless mode won't start</span></h3>
 <ol><li>Ensure you're using <code>freecadcmd</code> (not <code>freecad</code>).</li>
 <li>Verify the script path is correct for your installation.</li>
 <li>Test FreeCAD first: <code>freecadcmd -c "print('test')"</code>.</li></ol>
@@ -162,12 +162,12 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - The protocol specification.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114150659
+Cached time: 20260114150926
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.063 seconds
-Real time usage: 0.076 seconds
+CPU time usage: 0.070 seconds
+Real time usage: 0.073 seconds
 Preprocessor visited node count: 253/1000000
 Post&#8208;expand include size: 2233/2097152 bytes
 Template argument size: 742/2097152 bytes
@@ -178,16 +178,16 @@ Unstrip post&#8208;expand size: 3298/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.364      1 -total
- 21.43%    2.435      5 Template:Incode
- 21.30%    2.420      3 Template:Button
- 18.96%    2.154      4 Template:Code
- 11.10%    1.261      1 Template:TOCright
-  9.48%    1.077      4 Template:MenuCommand
-  7.28%    0.827      3 Template:FileName
+100.00%    9.181      1 -total
+ 25.45%    2.337      4 Template:Code
+ 13.96%    1.281      5 Template:Incode
+ 13.23%    1.215      3 Template:FileName
+ 12.20%    1.120      1 Template:TOCright
+ 10.38%    0.953      3 Template:Button
+ 10.26%    0.942      4 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260114150710 and revision id 1738274. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260114150933 and revision id 1738275. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
