Updated page Robust MCP Bridge Workbench/de

--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -46,9 +46,7 @@
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
 <p><span id="GUI_mode"></span>
 </p>
-<div class="mw-translate-fuzzy">
 <h3><span id="Grafischer_Benutzeroberfl.C3.A4chenmodus"></span><span class="mw-headline" id="Grafischer_Benutzeroberfl&auml;chenmodus">Grafischer Benutzeroberfl&auml;chenmodus</span></h3>
-</div>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Addon_RobustMCPBridge_toolbar.png&amp;filetimestamp=20260111060550&amp;.html" class="mw-file-description" title="Symbolleiste des Arbeitsbereichs Robust MCP Bridge"><img alt="Symbolleiste des Arbeitsbereichs Robust MCP Bridge" src="../File/Addon_RobustMCPBridge_toolbar.png" decoding="async" width="294" height="102" class="mw-file-element" data-file-width="294" data-file-height="102"></a></span>
 </p>
 <ol><li>Mit der Arbeitsbereichsauswahl zum Arbeitsbereich <b>Robust MCP Bridge</b> wechseln.</li>
@@ -59,9 +57,7 @@
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Addon_RobustMCPBridge_statusbar.png&amp;filetimestamp=20260111011608&amp;.html" class="mw-file-description" title="Statusleiste des Arbeitsbereichs Robust MCP Bridge"><img alt="Statusleiste des Arbeitsbereichs Robust MCP Bridge" src="../File/Addon_RobustMCPBridge_statusbar.png" decoding="async" width="396" height="86" class="mw-file-element" data-file-width="396" data-file-height="86"></a></span>
 </p><p><span id="Headless_mode"></span>
 </p>
-<div class="mw-translate-fuzzy">
 <h3><span class="mw-headline" id="Kopfloser_Modus">Kopfloser Modus</span></h3>
-</div>
 <p>F&uuml;r Automatisierung und CI/CD-Pipelines kann die Br&uuml;cke ohne grafische Benutzeroberfl&auml;che ausgef&uuml;hrt werden:
 </p><p><b>Linux:</b>
 </p>
@@ -107,9 +103,7 @@
 <p><span typeof="mw:File"><a href="../index.php?title=Addon_RobustMCPBridge_preferences.png&amp;filetimestamp=20260111061341&amp;.html" class="mw-file-description" title="Einstellungsfenster des Arbeitsbereichs Robust MCP Bridge"><img alt="Einstellungsfenster des Arbeitsbereichs Robust MCP Bridge" src="../File/Addon_RobustMCPBridge_preferences.png" decoding="async" width="800" height="598" class="mw-file-element" data-file-width="1790" data-file-height="1338"></a></span>
 </p><p><span id="Features_by_mode"></span>
 </p>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Funktionen_nach_Modus">Funktionen nach Modus</span></h2>
-</div>
 <table class="wikitable">
 <tbody><tr>
 <th>Funktion</th>
@@ -158,9 +152,7 @@
 </td></tr></tbody></table>
 <p><span id="Connecting_MCP_clients"></span>
 </p>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="MCP-Clients_verbinden">MCP-Clients verbinden</span></h2>
-</div>
 <p>Dieser Arbeitsbereich stellt den Server bereit, mit dem sich MCP-Clients verbinden. Um sie mit KI-Assistenten wie Claude zu verwenden, wird ein MCP-Client wie den <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a> ben&ouml;tigt:
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">pip</span> <span class="n">install</span> <span class="n">freecad</span><span class="o">-</span><span class="n">robust</span><span class="o">-</span><span class="n">mcp</span>
@@ -207,13 +199,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165146
+Cached time: 20260114165156
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.055 seconds
-Real time usage: 0.084 seconds
-Preprocessor visited node count: 232/1000000
+CPU time usage: 0.061 seconds
+Real time usage: 0.070 seconds
+Preprocessor visited node count: 228/1000000
 Post&#8208;expand include size: 2257/2097152 bytes
 Template argument size: 760/2097152 bytes
 Highest expansion depth: 4/100
@@ -223,16 +215,16 @@ Unstrip post&#8208;expand size: 3286/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.370      1 -total
- 22.86%    4.427      4 Template:Code
- 18.84%    3.649      5 Template:Incode
- 14.33%    2.776      4 Template:MenuCommand
- 13.38%    2.592      3 Template:Button
- 12.08%    2.339      3 Template:FileName
-  8.77%    1.699      1 Template:TOCright
+100.00%    7.690      1 -total
+ 25.18%    1.937      4 Template:Code
+ 15.87%    1.220      5 Template:Incode
+ 12.16%    0.935      1 Template:TOCright
+ 11.69%    0.899      3 Template:FileName
+ 10.54%    0.810      4 Template:MenuCommand
+ 10.15%    0.781      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114165145 and revision id 1738318. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114165156 and revision id 1738326. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
