Updated page Robust MCP Bridge Workbench/de

--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -11,11 +11,8 @@
 <p>Der <b>Arbeitsbereich Robust MCP Bridge</b> stellt den serverseitigen Verbindungspunkt bereit, der eine Br&uuml;cke (engl. Bridge) zum <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP-Server</a> bildet, wodurch externe Anwendungen FreeCAD &uuml;ber das <a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol (MCP)</a> steuern k&ouml;nnen. Der Arbeitsbereich l&auml;uft innerhalb von FreeCAD und stellt XML-RPC- und JSON-RPC-Schnittstellen bereit, mit denen externe MCP-Clients eine Verbindung herstellen k&ouml;nnen.
 </p>
 </div>
-<div class="mw-translate-fuzzy">
 <p>Dieser Arbeitsbereich ist f&uuml;r die Verwendung mit dem <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP-Server</a> (verf&uuml;gbar auf PyPI) konzipiert, der es KI-Assistenten wie <a rel="nofollow" class="external text" href="https://claude.ai">Claude</a> erm&ouml;glicht, &uuml;ber nat&uuml;rliche Sprache mit FreeCAD zu interagieren. Die vollst&auml;ndige Dokumentation und der Quellcode sind unter <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">github/spkane/freecad-robust-mcp-and-more</a> zu finden, wo der MCP-Server, Br&uuml;cke und einige FreeCAD-Makros gefunden werden k&ouml;nnen, die f&uuml;r verschiedene Zwecke verwendet werden, die nicht unbedingt mit KI oder der MCP-Arbeit zusammenh&auml;ngen.
-</p>
-</div>
-<p><b>Wichtigste Merkmale:</b>
+</p><p><b>Wichtigste Merkmale:</b>
 </p>
 <ul><li>Symbolleistensteuerelemente zum Starten/Beenden der MCP-Br&uuml;cke.</li>
 <li>Statusanzeige f&uuml;r den Verbindungsstatus (gr&uuml;n = l&auml;uft, rot = angehalten).</li>
@@ -193,13 +190,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165204
+Cached time: 20260114165219
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
-Real time usage: 0.046 seconds
-Preprocessor visited node count: 225/1000000
+CPU time usage: 0.039 seconds
+Real time usage: 0.058 seconds
+Preprocessor visited node count: 224/1000000
 Post&#8208;expand include size: 2257/2097152 bytes
 Template argument size: 760/2097152 bytes
 Highest expansion depth: 4/100
@@ -209,16 +206,16 @@ Unstrip post&#8208;expand size: 3286/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.142      1 -total
- 28.35%    2.592      4 Template:Code
- 13.71%    1.253      1 Template:TOCright
- 13.06%    1.194      5 Template:Incode
- 11.66%    1.066      4 Template:MenuCommand
- 11.37%    1.039      3 Template:FileName
- 10.74%    0.982      3 Template:Button
+100.00%   11.155      1 -total
+ 21.54%    2.403      4 Template:Code
+ 19.89%    2.219      4 Template:MenuCommand
+ 14.24%    1.588      3 Template:Button
+ 12.27%    1.369      5 Template:Incode
+ 11.74%    1.310      1 Template:TOCright
+ 10.92%    1.218      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114165204 and revision id 1738332. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114165219 and revision id 1738334. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
