Created page with "== Benutzeroberfläche =="

--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -207,8 +207,8 @@ Cached time: 20260114165513
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.067 seconds
-Real time usage: 0.080 seconds
+CPU time usage: 0.043 seconds
+Real time usage: 0.064 seconds
 Preprocessor visited node count: 258/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -219,14 +219,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.121      1 -total
- 48.93%    3.484      2 Template:Message
- 34.65%    2.467      1 Template:VeryImportantMessage
- 32.96%    2.347      1 Template:FileName
- 11.61%    0.827      1 Template:TOCright
+100.00%   15.701      1 -total
+ 58.16%    9.131      1 Template:VeryImportantMessage
+ 33.32%    5.231      2 Template:Message
+ 14.01%    2.200      1 Template:FileName
+  7.16%    1.125      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165513 and revision id 1738346. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165513 and revision id 1738346. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
