Created page with "== Arbeitsbereich Material =="

--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -119,9 +119,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Inspection_improvements">Further Inspection improvements</span></h3>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Material_Workbench">Material Workbench</span></h2>
-</div>
+<p><span id="Material_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Arbeitsbereich_Material">Arbeitsbereich Material</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Material_improvements">Further Material improvements</span></h3>
 </div>
@@ -199,12 +199,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165651
+Cached time: 20260114165702
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.045 seconds
-Real time usage: 0.057 seconds
+CPU time usage: 0.052 seconds
+Real time usage: 0.074 seconds
 Preprocessor visited node count: 256/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -215,14 +215,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.955      1 -total
- 44.65%    3.105      2 Template:Message
- 32.91%    2.289      1 Template:VeryImportantMessage
- 19.18%    1.334      1 Template:TOCright
- 16.23%    1.129      1 Template:FileName
+100.00%    9.311      1 -total
+ 52.67%    4.904      2 Template:Message
+ 30.04%    2.797      1 Template:FileName
+ 23.47%    2.185      1 Template:TOCright
+ 19.39%    1.805      1 Template:VeryImportantMessage
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165651 and revision id 1738370. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165702 and revision id 1738372. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
