Created page with "=== Weitere TechDraw Verbesserungen ==="

--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -189,20 +189,20 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="TechDraw_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_TechDraw">Arbeitsbereich TechDraw</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_TechDraw_improvements">Further TechDraw improvements</span></h3>
-</div>
+<p><span id="Further_TechDraw_improvements"></span>
+</p>
+<h3><span class="mw-headline" id="Weitere_TechDraw_Verbesserungen">Weitere TechDraw Verbesserungen</span></h3>
 <p><span id="Import_and_export"></span>
 </p>
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170300
+Cached time: 20260114170308
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.050 seconds
-Real time usage: 0.063 seconds
+CPU time usage: 0.043 seconds
+Real time usage: 0.051 seconds
 Preprocessor visited node count: 255/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -213,14 +213,14 @@ Unstrip post&#8208;expand size: 677/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.161      1 -total
- 44.39%    2.291      2 Template:Message
- 32.24%    1.664      1 Template:VeryImportantMessage
- 22.03%    1.137      1 Template:FileName
- 18.39%    0.949      1 Template:TOCright
+100.00%    4.727      1 -total
+ 43.62%    2.062      2 Template:Message
+ 30.57%    1.445      1 Template:VeryImportantMessage
+ 20.58%    0.973      1 Template:TOCright
+ 19.76%    0.934      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170300 and revision id 1738434. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170308 and revision id 1738436. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
