Updated page Assembly/de

--- a/wiki/de/Assembly.html
+++ b/wiki/de/Assembly.html
@@ -23,14 +23,11 @@
 </p>
 <h3><span class="mw-headline" id="Manueller_Zusammenbau">Manueller Zusammenbau</span></h3>
 <p>Im Allgemeinen werden keine speziellen Werkzeuge ben&ouml;tigt, um Baugruppen zusammenzubauen, es m&uuml;ssen nur viele verschiedene <a href="../de/Body.html" title="Body/de">K&ouml;rper</a> in irgendeiner Weise angeordnet haben.
+</p><p>Um die K&ouml;rper wie gew&uuml;nscht zu positionieren, gibt es folgende M&ouml;lichkeiten:
 </p>
-<div class="mw-translate-fuzzy">
-<p>Um die K&ouml;rper wie gew&uuml;nscht zu positionieren, gibt es folgende M&ouml;lichkeiten:
-</p>
-<ul><li>Das Werkzeug <a href="../de/Std_TransformManip.html" title="Std TransformManip/de">Std TransformManip</a> verwenden,</li>
+<ul><li>Das Werkzeug <span typeof="mw:File"><a href="../index.php?title=Std_TransformManip.svg&amp;filetimestamp=20240411193912&amp;.html" class="mw-file-description"><img src="../File/Std_TransformManip.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Std_TransformManip.html" title="Std TransformManip/de">Std Bewegen</a> verwenden,</li>
 <li>Den Dialog <span typeof="mw:File"><a href="../index.php?title=Std_Placement.svg&amp;filetimestamp=20200107104731&amp;.html" class="mw-file-description"><img src="../File/Std_Placement.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Std_Placement.html" title="Std Placement/de">Std Positionierung</a> verwenden</li>
-<li>Die Eigenschaft <a href="../de/Placement.html" title="Placement/de">Platzierung</a> direkt im <a href="../de/Property_editor.html" class="mw-redirect" title="Property editor/de">Eigenschafteneditor</a> anpassen.</li></ul>
-</div>
+<li>Die Eigenschaft <a href="../de/Placement.html" title="Placement/de">Platzierung</a> direkt in der <a href="../de/Property_View.html" title="Property View/de">Eigenschaften-Ansicht</a> anpassen.</li></ul>
 <div class="mw-translate-fuzzy">
 <p>Es kann einer der <a href="../de/External_workbenches.html" title="External workbenches/de">externen Pseudo-Zusammenbau-Arbeitsbereiche</a> wie Lattice2, Manipulator, Part-o-magic oder WorkFeature verwendet werden, um Schnittpunkte zu ermitteln, Abst&auml;nde zu messen und Objekte auf die gew&uuml;nschte Weise zu verteilen.
 </p>
@@ -119,12 +116,12 @@ Bitte beachten, dass <a href="../de/Assembly2_Workbench.html" title="Assembly2 W
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114150334
+Cached time: 20260114171718
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.092 seconds
+CPU time usage: 0.080 seconds
+Real time usage: 0.144 seconds
 Preprocessor visited node count: 357/1000000
 Post&#8208;expand include size: 31475/2097152 bytes
 Template argument size: 12339/2097152 bytes
@@ -135,17 +132,17 @@ Unstrip post&#8208;expand size: 1544/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.553      1 -total
- 48.36%    8.488      1 Template:Std_Base_navi/de
- 33.39%    5.862      3 Template:Navigation_menu_2
- 22.45%    3.941      1 Template:Document_objects_navi/de
-  8.23%    1.444      1 Template:Userdocnavi/de
-  6.51%    1.143      1 Template:Caption
-  6.45%    1.133      1 Template:TOCright
-  5.66%    0.994      1 Template:Button
+100.00%   31.924      1 -total
+ 44.75%   14.287      1 Template:Std_Base_navi/de
+ 35.83%   11.438      3 Template:Navigation_menu_2
+ 34.15%   10.903      1 Template:Document_objects_navi/de
+  6.20%    1.980      1 Template:Userdocnavi/de
+  5.85%    1.866      1 Template:TOCright
+  4.02%    1.283      1 Template:Caption
+  3.16%    1.009      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199590-0!canonical and timestamp 20260114150334 and revision id 1738269. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199590-0!canonical and timestamp 20260114171717 and revision id 1738458. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
